Downgrade Java version from 23 to 21